fix text overflow on top

--- a/style.css
+++ b/style.css
@@ -6,12 +6,12 @@
 }
 
 .display{
-    height: 40px;
+    min-height: 40px;
     display: flex;
     justify-content: end;
     align-items: center;
     padding: 10px;
-    word-break:break-all
+    word-break:break-all;
 }
 
 .buttons{
